<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundScreens"
    tools:context="com.example.registration.LevelOfActivityFragment">

    <TextView
        android:id="@+id/textViewLevelOfActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/sixteenIntuit"
        android:gravity="center"
        android:text="@string/textViewLevelOfActivity"
        android:textColor="@color/white"
        android:textSize="@dimen/twentyFourIntuit"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonVeryLow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLevelOfActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/sixteenIntuit"
        android:layout_marginTop="@dimen/sixteenIntuit"
        android:layout_marginRight="@dimen/sixteenIntuit"
        android:background="@drawable/unselected_button_bg_rectangle"
        android:drawableRight="@drawable/ic_check_black_24dp"
        android:gravity="left"
        android:paddingLeft="@dimen/eightIntuit"
        android:paddingTop="@dimen/fourIntuit"
        android:paddingRight="@dimen/fifteenIntuit"
        android:paddingBottom="@dimen/fourIntuit"
        android:text="@string/buttonVeryLow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteenIntuit" />

    <Button
        android:id="@+id/buttonLow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonVeryLow"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/sixteenIntuit"
        android:layout_marginTop="@dimen/sixteenIntuit"
        android:layout_marginRight="@dimen/sixteenIntuit"
        android:background="@drawable/unselected_button_bg_rectangle"
        android:drawableRight="@drawable/ic_check_black_24dp"
        android:gravity="left"
        android:paddingLeft="@dimen/eightIntuit"
        android:paddingTop="@dimen/fourIntuit"
        android:paddingRight="@dimen/fifteenIntuit"
        android:paddingBottom="@dimen/fourIntuit"
        android:text="@string/buttonLow"
        android:textAllCaps="false"
        android:textColor="@color/white"

        android:textSize="@dimen/sixteenIntuit" />

    <Button
        android:id="@+id/buttonMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonLow"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/sixteenIntuit"
        android:layout_marginTop="@dimen/sixteenIntuit"
        android:layout_marginRight="@dimen/sixteenIntuit"
        android:background="@drawable/unselected_button_bg_rectangle"
        android:drawableRight="@drawable/ic_check_black_24dp"
        android:gravity="left"
        android:paddingLeft="@dimen/eightIntuit"
        android:paddingTop="@dimen/fourIntuit"
        android:paddingRight="@dimen/fiftyIntuit"
        android:paddingBottom="@dimen/fourIntuit"
        android:text="@string/buttonMedium"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteenIntuit" />

    <Button
        android:id="@+id/buttonHigh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMedium"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/sixteenIntuit"
        android:layout_marginTop="@dimen/sixteenIntuit"
        android:layout_marginRight="@dimen/sixteenIntuit"
        android:background="@drawable/unselected_button_bg_rectangle"
        android:drawableRight="@drawable/ic_check_black_24dp"
        android:gravity="left"
        android:paddingLeft="@dimen/eightIntuit"
        android:paddingTop="@dimen/fourIntuit"
        android:paddingRight="@dimen/fiftyIntuit"
        android:paddingBottom="@dimen/fourIntuit"
        android:text="@string/buttonHigh"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteenIntuit" />

    <Button
        android:id="@+id/buttonVeryHigh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonHigh"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/sixteenIntuit"
        android:layout_marginTop="@dimen/sixteenIntuit"
        android:layout_marginRight="@dimen/sixteenIntuit"
        android:background="@drawable/unselected_button_bg_rectangle"
        android:drawableRight="@drawable/ic_check_black_24dp"
        android:gravity="left"
        android:paddingLeft="@dimen/eightIntuit"
        android:paddingTop="@dimen/fourIntuit"
        android:paddingRight="@dimen/fiftyIntuit"
        android:paddingBottom="@dimen/fourIntuit"
        android:text="@string/buttonVeryHigh"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sixteenIntuit" />


    <ImageButton
        android:id="@+id/imageButtonNextLevelOfActivity"
        android:layout_width="@dimen/sixtyFourIntuit"
        android:layout_height="@dimen/sixtyFourIntuit"
        android:layout_below="@+id/buttonVeryHigh"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fortyEightIntuit"
        android:background="@drawable/button_bg_round"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/next_arrow" />

</RelativeLayout>
